--- a/vue3-intro-fm/src/assets/main.css
+++ b/vue3-intro-fm/src/assets/main.css
@@ -15,6 +15,18 @@ a,
   padding: 3px;
 }
 
+input {
+  background-color: var(--vt-c-black);
+  border: 1px solid var(--vt-c-white);
+  color: var(--vt-c-white);
+  border-radius: 5px;
+  padding: 5px;
+
+  &:focus {
+    border: 1px solid var(--vt-c-white);
+  }
+}
+
 button {
   background-color: hsla(160, 100%, 37%, 1);
   color: white;
@@ -40,4 +52,8 @@ button {
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
+}
+
+.margin-bottom {
+  margin-bottom: 1rem;
 }
