--- a/vue3-intro-fm/src/assets/base.css
+++ b/vue3-intro-fm/src/assets/base.css
@@ -1,5 +1,18 @@
-/* color palette from <https://github.com/vuejs/theme> */
-:root {
+/* :root {
+  --primary-50: 0 10 26;
+  --primary-100: 0 29 77;
+  --primary-200: 0 49 128;
+  --primary-300: 0 68 179;
+  --primary-400: 0 88 230;
+  --primary-500: 56 132 255;
+  --primary-600: 26 113 255;
+  --primary-700: 77 145 255;
+  --primary-800: 128 176 255;
+  --primary-900: 179 208 255;
+  --primary-950: 229 239 255;
+} */
+
+/* :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
@@ -21,7 +34,6 @@
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 }
 
-/* semantic color variables for this project */
 :root {
   --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
@@ -56,11 +68,12 @@
   box-sizing: border-box;
   margin: 0;
   font-weight: normal;
-}
+} */
 
-body {
+/* body {
   min-height: 100vh;
   color: var(--color-text);
+  margin: 10px 10%;
   background: var(--color-background);
   transition:
     color 0.5s,
@@ -83,4 +96,4 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
